# kendryte-freertos-sdk

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.example.cmake  README.md  kendryte-package.json
cmake/: CMakeLists.txt  common.cmake  compile-flags.cmake  dump-config.cmake  executable.cmake  fix-9985.cmake  ide.cmake  macros.cmake  macros.internal.cmake  reset.cmake  save.cmake  toolchain.cmake
lds/: kendryte.ld
lib/: .clang-format  CMakeLists.txt
lib/arch/include/: atomic.h  encoding.h  fpioa_cfg.h  iomem.h  pin_cfg.h  platform.h
lib/bsp/: CMakeLists.txt  crt.S  dump.c  entry_user.c  except.c  interrupt.c  iomem.c  printf.c  sleep.c  syscalls.c
lib/bsp/config/: fpioa_cfg.c  pin_cfg.c
lib/bsp/device/: aes.c  aes.cpp  dmac.c  dmac.cpp  dvp.c  dvp.cpp  fft.c  fft.cpp  fpioa.c  fpioa_cfg.h  gpio.c  gpio.cpp  gpiohs.c  gpiohs.cpp  i2c.c  i2c.cpp  i2s.c  i2s.cpp  kpu.cpp  plic.c  plic.cpp  pwm.c  pwm.cpp  registry.c  registry.cpp  rtc.c  rtc.cpp  sccb.c  sccb.cpp  sha256.c  sha256.cpp  spi.c  spi.cpp  timer.c  timer.cpp  uart.c  uart.cpp  wdt.c  wdt.cpp
lib/bsp/include/: atomic.h  dump.h  encoding.h  entry.h  fpioa_cfg_priv.h  interrupt.h  pin_cfg_priv.h  platform.h  printf.h  sleep.h
lib/bsp/syscalls/: syscalls.cpp  syscalls.h
lib/drivers/: CMakeLists.txt  clint.c  fpioa.c  io.c  otp.c  rtc.c  sysctl.c  uarths.c
lib/drivers/include/: aes.h  audio_bf.h  clint.h  common.h  dmac.h  dvp.h  fft.h  fpioa.h  gpio.h  gpiohs.h  hard_fft.h  i2c.h  i2s.h  io.h  plic.h  rtc.h  sha256.h  spi.h  sysctl.h  timer.h  uart.h  uarths.h  utility.h  wdt.h
lib/drivers/include/display/: ili9341.h
lib/drivers/include/misc/ws2812b/: ws2812b.h
lib/drivers/include/network/: dm9051.h
lib/drivers/include/storage/: sdcard.h
lib/drivers/include/ws2812b/: ws2812b.h
lib/drivers/src/display/: ili9341.cpp
lib/drivers/src/misc/ws2812b/: ws2812b.cpp
lib/drivers/src/network/: dm9051.cpp
lib/drivers/src/storage/: sdcard.c  sdcard.cpp  sdcard.cpp2
lib/drivers/src/ws2812b/: ws2812b.cpp
lib/freertos/: CMakeLists.txt  core_sync.c  locks.c  os_entry.c  os_interrupt.c  pthread.c  tasks.c  timers.c
lib/freertos/conf/: FreeRTOSConfig.h
lib/freertos/device/: device_priv.h  devices.c  devices.cpp  devices.h  driver.h  hal.h
lib/freertos/device/storage/: filesystem.c
lib/freertos/include/: core_sync.h  devices.h  display_context.h  driver.h  filesystem.h  hal.h  network.h  osdefs.h  stack_macros.h  task.h
lib/freertos/include/kernel/: driver.hpp  driver_impl.hpp  object.hpp
lib/freertos/kernel/: device_priv.h  devices.cpp  driver_impl.cpp
lib/freertos/kernel/graphics/: display_context.cpp
lib/freertos/kernel/network/: network.cpp  socket.cpp
lib/freertos/kernel/storage/: filesystem.cpp
lib/freertos/portable/: heap_4.c  port.c  portasm.S  portmacro.h
lib/hal/: CMakeLists.txt  clint.c  sysctl.c  uarths.c  utility.c
lib/hal/include/: dmac.h  dvp.h  fft.h  fpioa.h  gpio.h  gpiohs.h  i2c.h  kpu.h  plic.h  sha256.h  spi.h  sysctl.h  utility.h  wdt.h
lib/math/: fastexp.c  fastexp.h
lib/posix/: CMakeLists.txt  ioctl.cpp  ip4_addr.cpp  memory.cpp  netdb.cpp  posix_conf.cpp  pthread.cpp  pthread_cond.cpp  pthread_mutex.cpp  socket.cpp  utils.cpp  utils.h
lib/posix/include/: utils.h
lib/posix/include/sys/: ioctl.h  ip4_addr.h  ip_addr.h  netdb.h  socket.h
lib/utils/include/: syslog.h
src/: .gitignore
src/face_detect/: README.md  dvp_camera.c  dvp_camera.h  incbin.h  jlt32009a.c  jlt32009a.h  lcd.c  lcd.h  main.c  ov5640.c  ov5640.h  ov5640af.h  ov5640cfg.h  project_cfg.h  region_layer.h  w25qxx.c  w25qxx.h
src/face_detect/kfpkg/: kfpkg.kfpkg
src/hello_world/: main.c
src/keywordspot/: chino.c  main.cpp  model.c  project_cfg.c  project_cfg.h
src/tensorflow/: bitmap_helpers.cpp  bitmap_helpers.h  bitmap_helpers_impl.h  image.c  labels.c  main.cpp  project_cfg.h
src/uart_dma/: README.md  main.c  project_cfg.h
